--- a/res.qrc
+++ b/res.qrc
@@ -4,5 +4,6 @@
         <file>res/gallery.png</file>
         <file>res/icon.png</file>
         <file>res/rotation.png</file>
+        <file>res/io.png</file>
     </qresource>
 </RCC>
