--- a/simulator.ui
+++ b/simulator.ui
@@ -419,6 +419,22 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="label_IO_icon">
+    <property name="geometry">
+     <rect>
+      <x>487</x>
+      <y>320</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/res/io.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QLabel" name="label_monitor">
    <property name="geometry">
@@ -759,22 +775,6 @@
      <string>停止执行</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinBox_timeScale">
-    <property name="geometry">
-     <rect>
-      <x>440</x>
-      <y>150</y>
-      <width>83</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Cascadia Code</family>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_timeScale">
     <property name="geometry">
      <rect>
@@ -875,6 +875,24 @@
     </property>
     <property name="text">
      <string>自动IO间隔：</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_timeScale">
+    <property name="geometry">
+     <rect>
+      <x>435</x>
+      <y>150</y>
+      <width>86</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Cascadia Code</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
    </widget>
   </widget>
